<resources>
    <string name="app_name">Player</string>
    <string name="developer_email">lars@willemsens.org</string>
    <string name="title_music">Music</string>
    <string name="title_albums">Albums</string>
    <string name="title_artists">Artists</string>
    <string name="title_songs">Songs</string>
    <string name="title_settings">Settings</string>

    <string name="read_external_storage_required">Read External Storage permission allows us to read music files. Please allow this permission in App Settings.</string>
    <string name="internet_required">Internet permission allows us to download album art and artist pictures. Please allow this permission in App Settings.</string>


    <string name="scanner_service_description">Scans a select number of directories (listed in settings) for music
        files.
    </string>
    <string name="purging_service_description">Updates the list of songs, albums and artists in case music files are
        removed from storage.
    </string>
    <string name="album_image_fetcher_service_description">Fetches album art.</string>
    <string name="artist_image_fetcher_service_description">Fetches artist art.</string>
    <string name="music_playing_service_description">Plays music.</string>

    <string name="channel_name">Music Player channel</string>
    <string name="channel_description">Music Player channel</string>

    <string name="album_cover_image_description">Album cover</string>
    <string name="artist_image_description">Artist image</string>
    <string name="app_logo_description">Application Logo</string>
    <string name="previous_track_description">Previous track</string>
    <string name="next_track_description">Next track</string>
    <string name="play_pause_stop_description">Play Pause Stop</string>

    <string name="key_first_app_execution">org.willemsens.FIRST_APP_EXECUTION</string>

    <string name="key_artists_inserted">org.willemsens.ARTISTS_INSERTED</string>
    <string name="key_artist_inserted">org.willemsens.ARTIST_INSERTED</string>
    <string name="key_artist_updated">org.willemsens.ARTIST_UPDATED</string>
    <string name="key_artist_ids">org.willemsens.ARTIST_IDS</string>
    <string name="key_artist_id">org.willemsens.ARTIST_ID</string>

    <string name="key_albums_inserted">org.willemsens.ALBUMS_INSERTED</string>
    <string name="key_album_inserted">org.willemsens.ALBUM_INSERTED</string>
    <string name="key_album_updated">org.willemsens.ALBUM_UPDATED</string>
    <string name="key_album_ids">org.willemsens.ALBUM_IDS</string>
    <string name="key_album_id">org.willemsens.ALBUM_ID</string>

    <string name="key_songs_inserted">org.willemsens.SONGS_INSERTED</string>
    <string name="key_song_inserted">org.willemsens.SONG_INSERTED</string>
    <string name="key_song_id">org.willemsens.SONG_ID</string>

    <string name="key_play_mode">org.willemsens.PLAY_MODE</string>
    <string name="key_play_command">org.willemsens.PLAY_COMMAND</string>
    <string name="key_play_status">org.willemsens.PLAY_STATUS</string>

    <string name="key_player_status">org.willemsens.PLAYER_STATUS</string>
    <string name="key_query_player_status">org.willemsens.QUERY_PLAYER_STATUS</string>

    <string name="key_pref_play_mode">org.willemsens.PlayBackService.PREF_PLAY_MODE</string>
    <string name="key_pref_play_status">org.willemsens.PlayBackService.PREF_PLAY_STATUS</string>
    <string name="key_pref_play_song_id">org.willemsens.PlayBackService.PREF_SONG_ID</string>
    <string name="key_pref_play_position_millis">org.willemsens.PlayBackService.PREF_POSITION_MILLIS</string>

    <string name="key_action_setup">org.willemsens.PlayBackService.ACTION_SETUP</string>
    <string name="key_action_dismiss">org.willemsens.PlayBackService.ACTION_DISMISS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_music_library">Music Library</string>
    <string name="action_settings">Settings</string>
    <string name="group_communicate">Communicate</string>
    <string name="action_about">About</string>
    <string name="action_contact">Contact</string>
    <string name="action_filter">Filter</string>

    <string name="action_filter_songs_show_all">All songs</string>
    <string name="action_filter_songs_by_album">Albums</string>
    <string name="action_filter_songs_by_artist">Artists</string>
    <string name="action_filter_albums_show_all">All albums</string>
    <string name="action_filter_albums_by_artist">Artists</string>
    <string name="action_filter_all_albums">All</string>
    <string name="action_filter_all_artists">All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
