<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_item_filter_songs_show_all"
        android:title="@string/action_filter_songs_show_all"/>

    <item android:id="@+id/menu_item_filter_songs_by_album"
        android:title="@string/action_filter_songs_by_album">
        <menu>
            <item android:id="@+id/menu_item_filter_all_albums"
                  android:title="@string/action_filter_all_albums">
            </item>
        </menu>
    </item>

    <item android:id="@+id/menu_item_filter_songs_by_artist"
          android:title="@string/action_filter_songs_by_artist">
        <menu>
            <item android:id="@+id/menu_item_filter_all_artists"
                  android:title="@string/action_filter_all_artists">
            </item>
        </menu>
    </item>

</menu>