<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_music_library"
                android:icon="@drawable/ic_library_music_black_24dp"
                android:title="@string/action_music_library"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings"/>
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_person_outline_black_24dp"
                    android:title="@string/action_about"/>
            <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_email_black_24dp"
                    android:title="@string/action_contact"/>
        </menu>
    </item>

</menu>
